bump permgen
tests seem to need it sometimes now