@@ -159,7 +159,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>GuacamoleTestSuite.txt</filereports>
-          <argLine>-Xmx3072m</argLine>
+          <argLine>-Xmx3072m -XX:MaxPermSize=256m</argLine>
           <stdout>F</stdout>
         </configuration>
         <executions>
